[tool.poetry]
name = "extract-did-info"
version = "0.1.0"
description = ""
authors = ["aandresalvarez <aandresalvarez@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyyaml = "^6.0.2"


[tool.poetry.group.dev.dependencies]
yamllint = "^1.35.1"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
